Add Config RPC/Rest and have it return BackendType
